Upgrade model with OBS 4.2-113